# geoEM

./: .gitignore  CMakeLists.txt  Destructor.hpp  Flags-MSVC.h  Flags.hpp  GLRender.cpp  GLRender.h  GLRender.hpp  GeometryTypes.cpp  GeometryTypes.h  GeometryTypes.hpp  GeometryUtils.cpp  GeometryUtils.h  GeometryUtils.hpp  Heap.hpp  IO.cpp  IO.h  IO.hpp  IO_OBJ.cpp  IO_OBJ.hpp  IO_core.cpp  IO_core.hpp  Image3.cpp  Image3.hpp  ImageConvert.hpp  Intersection.cpp  Intersection.h  Intersection.hpp  Iterators.h  Iterators.hpp  MRC.cpp  MedialAxisTransform.cpp  MedialAxisTransform.h  MedialAxisTransform.hpp  MedialAxisTransform_Geodesic.cpp  MedialAxisTransform_IO.cpp  MedialAxisTransform_IO.h  MedialAxisTransform_IO.hpp  MedialAxisTransform_Init.cpp  MedialAxisTransform_Types_Geodesic.h  (+57 more)
example-data/: big.off  big_simplified.off  small-skeleton.cg  small.off
